Fixing spacing on the table in internet explorer and slightly on other browsers.

--- a/themes/gdd/static/css/style.css
+++ b/themes/gdd/static/css/style.css
@@ -53,21 +53,29 @@ th {
 }
 
 .th_first {
-	width: 125px;
-	min-width: 125px;
+	width: 135px;
+	min-width: 135px;
 	height: 40px;
-	max-width: 100%;
-	max-height: 100%;
+	max-width: 135px;
+	max-height: 125px;
 	text-align: center;
+	vertical-align: center;
+	margin: 0em auto;
+	font-size: 24px;
+}
+
+td a {
+	font-size: 12px;
 }
 
 .th_rest {
-	width: 42px;
-	min-width: 42px;
-	max-width: 42px;
+	width: 74px;
+	min-width: 74px;
+	max-width: 74px;
 	font-size: 16px;
 	text-align: center;
 	vertical-align: center;
+	margin: 0em auto;
 }
 
 td {
